# temperature_station

./: .env.sample  Cargo.toml
common/: Cargo.toml
common/src/models/: dashboard_item.rs  measurement.rs  mod.rs
frontend/: .env.sample  app.vue  nuxt.config.ts  package-lock.json  package.json
frontend/components/: dateTimePicker.vue  header.vue  lineChart.vue
frontend/dashboard/: dashboard.vue  dashboardItem.vue
frontend/layouts/: default.vue
frontend/network/: dashboard.ts  network.ts
frontend/pages/: index.vue
frontend/pages/dashboard/: dashboard.vue  dashboardItem.vue  dashboardSettings.vue
frontend/pages/rooms/: [room].vue  index.vue
frontend/plugins/: vuetify.ts
frontend/store/: tempstation.ts
frontend/types/: dashboardItemData.ts  measurement.ts
microcontroller/tempreature_humidity/: tempreature_humidity.ino
microcontroller/tempreature_humidity/DHT11/: DHT11.ino
microcontroller/tempreature_humidity/DHT20/: DHT20.ino
microcontroller/th_ppm/th_ppm/: th_ppm.ino
migrations/: 20221214223725_setup.sql  README.md
server/: Cargo.toml
server/src/: main.rs
server/src/helper/: dashboard_item.rs  mod.rs  room.rs
server/src/impls/: measurement.rs
server/src/service/: dashboard.rs  measurement.rs  mod.rs  room.rs
server/src/traits/: database.rs
