[package]
name = "common"
version = "0.1.0"
authors = ["Matthias Lodner <matthias@lodner.de>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Deserialize/Serialize
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"

# Database
sqlx = { version = "0.6.3", features = [ "runtime-async-std-native-tls", "sqlite", "chrono" ] }

# Etc.
chrono = { version = "0.4.24", features = [ "serde" ] }
