[package]
name = "server"
version = "0.1.0"
authors = ["Matthias Lodner <matthias@lodner.de>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "server"
path = "src/main.rs"

[dependencies]
common = {path = "../common"}

# Actix
actix-rt = "2.9.0"
actix-web = { version = "4.4.0" }
actix-web-macros = "0.1.0"

actix-cors = "0.6.4"

# Deserialize/Serialize
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"

# Logging
env_logger = "0.10.0"

# Database
sqlx = { version = "0.7.2", features = [ "runtime-async-std-native-tls", "sqlite", "chrono" ] }

# Etc.
dotenv = "0.15.0"
futures = "0.3.28"
chrono = { version = "0.4.31", features = [ "serde" ] }
