[package]
name = "server"
version = "0.1.0"
authors = ["Matthias Lodner <matthias@lodner.de>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "server"
path = "src/main.rs"

[dependencies]
common = {path = "../common"}

# Actix
actix-rt = "2.10.0"
actix-web = { version = "4.9.0" }
actix-web-macros = "0.1.0"

actix-cors = "0.7.0"

# Deserialize/Serialize
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"

# Logging
env_logger = "0.11.5"

# Database
sqlx = { version = "0.8.2", features = [ "runtime-async-std-native-tls", "sqlite", "chrono" ] }

# Etc.
dotenv = "0.15.0"
futures = "0.3.30"
chrono = { version = "0.4.38", features = [ "serde" ] }
